--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     ],
     "verbose": true
   },
+  "bin": {
+    "mablung-makefile-environment-path": "./release/esmodule/command/mablung-makefile-environment-path.js"
+  },
   "c8": {
     "all": true,
     "exclude": [
@@ -30,6 +33,10 @@
   },
   "description": "TBD",
   "exports": {
+    ".": {
+      "import": "./release/esmodule/index.js",
+      "require": "./release/commonjs/index.cjs"
+    },
     "./package.json": "./package.json"
   },
   "license": "GPL-3.0+",
@@ -44,7 +51,10 @@
   "type": "module",
   "version": "0.0.1-8",
   "dependencies": {
-    "@virtualpatterns/mablung-makefile": "virtualpatterns/mablung-makefile"
+    "@virtualpatterns/mablung-makefile": "virtualpatterns/mablung-makefile",
+    "commander": "^8.0.0",
+    "fs-extra": "^10.0.0",
+    "json5": "^2.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
@@ -58,6 +68,7 @@
     "@virtualpatterns/mablung-babel-plugin-replace-string-literal": "virtualpatterns/mablung-babel-plugin-replace-string-literal",
     "@virtualpatterns/mablung-check-dependency": "virtualpatterns/mablung-check-dependency",
     "@virtualpatterns/mablung-source-map-support": "virtualpatterns/mablung-source-map-support.git",
+    "@virtualpatterns/mablung-worker": "virtualpatterns/mablung-worker.git",
     "ava": "^3.15.0",
     "c8": "^7.7.3",
     "eslint": "^7.29.0",
