--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/preset-env": "^7.14.7",
     "@pwn/is": "^1.0.2",
-    "@virtualpatterns/mablung-babel-plugin-replace-identifier": "virtualpatterns/mablung-babel-plugin-replace-identifier.git",
-    "@virtualpatterns/mablung-babel-plugin-replace-string-literal": "virtualpatterns/mablung-babel-plugin-replace-string-literal",
+    "@virtualpatterns/mablung-babel-plugin-replace-identifier": "0.0.1-15",
+    "@virtualpatterns/mablung-babel-plugin-replace-string-literal": "0.0.1-13",
     "@virtualpatterns/mablung-check-dependency": "0.0.1-45",
     "@virtualpatterns/mablung-worker": "virtualpatterns/mablung-worker.git",
     "ava": "^3.15.0",
