--- a/include/build
+++ b/include/build
@@ -4,6 +4,10 @@
 
 ifeq ($(CURDIR),$(project-path))
 
+ifeq ($(origin mablung-makefile-path),undefined)
+export mablung-makefile-path := $(patsubst %/,%,$(dir $(shell npx mablung-makefile get-path)))
+endif
+
 include $(mablung-makefile-path)/include/build
 
 else
@@ -25,6 +29,10 @@ filter-release-content =	$(call $\
 																		$(project-path)/release/esmodule%,$\
 																		$(1)))) $\
 															$(1)))
+
+ifeq ($(origin mablung-makefile-path),undefined)
+export mablung-makefile-path := $(patsubst %/,%,$(dir $(shell npx mablung-makefile get-path)))
+endif
 
 include $(mablung-makefile-path)/include/build
 	
