--- a/package.json
+++ b/package.json
@@ -19,11 +19,7 @@
   },
   "c8": {
     "all": true,
-    "exclude": [
-      "release/commonjs/test",
-      "release/esmodule/test",
-      "release/test"
-    ],
+    "exclude": [],
     "reporter": [
       "html"
     ],
@@ -51,8 +47,8 @@
   "type": "module",
   "version": "0.0.1-14",
   "dependencies": {
-    "@virtualpatterns/mablung-makefile": "0.0.1-69",
-    "@virtualpatterns/mablung-source-map-support": "0.0.2-50",
+    "@virtualpatterns/mablung-makefile": "0.0.1-",
+59    "@virtualpatterns/mablung-source-map-support": "0.0.2-50",
     "commander": "^8.0.0",
     "fs-extra": "^10.0.0",
     "json5": "^2.2.0"
