--- a/source/.babelrc.json
+++ b/source/.babelrc.json
@@ -39,8 +39,7 @@
             }
           }
         ]
-      ],
-      "sourceType": "module"
+      ]
     },
     "esmodule": {
       "plugins": [
@@ -89,9 +88,7 @@
           }
         ]
       ],
-      "presets": [],
-      "retainLines": true,
-      "sourceType": "module"
+      "presets": []
     }
   }
 }
