gotta put filter fn before include

--- a/include/build
+++ b/include/build
@@ -2,13 +2,15 @@
 # --mablung-makefile-environment-include-build-path := $(patsubst %/,%,$(dir $(realpath $(lastword $(MAKEFILE_LIST)))))
 # $(info --mablung-makefile-environment-include-build-path := $(--mablung-makefile-environment-include-build-path))
 
+ifeq ($(CURDIR),$(project-path))
+
 ifeq ($(origin mablung-makefile-path),undefined)
 export mablung-makefile-path := $(patsubst %/,%,$(dir $(shell npx mablung-makefile get-path)))
 endif
 
 include $(mablung-makefile-path)/include/build
 
-ifneq ($(CURDIR),$(project-path))
+else
 
 ifndef filter-environment-release-content
 filter-environment-release-content = $(1)
@@ -27,7 +29,13 @@ filter-release-content =	$(call $\
 																		$(project-path)/release/esmodule%,$\
 																		$(1)))) $\
 															$(1)))
-	
+
+ifeq ($(origin mablung-makefile-path),undefined)
+export mablung-makefile-path := $(patsubst %/,%,$(dir $(shell npx mablung-makefile get-path)))
+endif
+
+include $(mablung-makefile-path)/include/build
+
 # $(info --------------------)
 # $(info build-content = $(call trim-project,$(build-content)))
 # $(info release-content = $(call trim-project,$(release-content)))
