--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "verbose": true
   },
   "bin": {
-    "mablung-makefile-environment": "./release/esmodule/command/mablung-makefile-environment.js"
+    "mablung-makefile-environment": "./release/command/mablung-makefile-environment.js"
   },
   "c8": {
     "all": true,
@@ -29,12 +29,21 @@
     "src": "release"
   },
   "description": "TBD",
+  "eslintConfig": {
+    "extends": "@virtualpatterns/eslint-config-mablung-makefile",
+    "globals": {
+      "__filePath": "readonly",
+      "__require": "readonly"
+    }
+  },
   "exports": {
+    "./babel.config.json": "./babel.config.json",
     "./package.json": "./package.json"
   },
   "files": [
     "/include",
-    "/release/esmodule/command",
+    "/release/command",
+    "babel.config.json",
     "makefile"
   ],
   "license": "GPL-3.0+",
@@ -43,44 +52,25 @@
     "type": "git",
     "url": "https://github.com/virtualpatterns/mablung-makefile-environment"
   },
-  "scripts": {
-    "test": "make test"
-  },
   "type": "module",
   "version": "0.0.1-26",
   "dependencies": {
-    "@virtualpatterns/mablung-makefile": "0.0.1-80",
-    "@virtualpatterns/mablung-source-map-support": "0.0.2-59",
-    "commander": "^8.0.0",
+    "@virtualpatterns/mablung-makefile": "0.0.1-93",
+    "@virtualpatterns/mablung-source-map-support": "0.0.2-67",
+    "commander": "^8.1.0",
     "fs-extra": "^10.0.0",
     "json5": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/eslint-parser": "^7.14.7",
-    "@babel/plugin-proposal-export-default-from": "^7.14.5",
+    "@babel/core": "^7.14.8",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/preset-env": "^7.14.7",
-    "@pwn/is": "^1.0.2",
-    "@virtualpatterns/mablung-babel-plugin-replace-identifier": "0.0.1-26",
-    "@virtualpatterns/mablung-babel-plugin-replace-string-literal": "0.0.1-23",
-    "@virtualpatterns/mablung-check-dependency": "0.0.1-58",
-    "@virtualpatterns/mablung-worker": "0.0.2-39",
-    "ava": "^3.15.0",
-    "c8": "^7.7.3",
-    "eslint": "^7.30.0",
-    "eslint-plugin-babel": "^5.3.1",
-    "npm-check-updates": "^11.8.3",
-    "shx": "^0.3.3"
-  },
-  "peerDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "ava": "^3.15.0",
-    "c8": "^7.7.3",
-    "eslint": "^7.30.0",
-    "npm-check-updates": "^11.8.3",
-    "shx": "^0.3.3"
+    "@babel/preset-env": "^7.14.8",
+    "@virtualpatterns/babel-preset-mablung-makefile": "0.0.1-1",
+    "@virtualpatterns/eslint-config-mablung-makefile": "0.0.1-12",
+    "@virtualpatterns/mablung-babel-plugin-replace-identifier": "0.0.1-31",
+    "@virtualpatterns/mablung-babel-plugin-replace-string-literal": "0.0.1-27",
+    "@virtualpatterns/mablung-check-dependency": "0.0.1-63",
+    "@virtualpatterns/mablung-worker": "0.0.2-40",
+    "ava": "^3.15.0"
   }
 }
