--- a/package.json
+++ b/package.json
@@ -14,6 +14,101 @@
     ],
     "verbose": true
   },
+  "babel": {
+    "presets": [
+      "@virtualpatterns/babel-preset-mablung-makefile"
+    ],
+    "env": {
+      "commonjs": {
+        "plugins": [
+          [
+            "@virtualpatterns/babel-plugin-mablung-replace-identifier",
+            {
+              "rule": [
+                {
+                  "searchFor": "__filePath",
+                  "replaceWith": "__filename"
+                },
+                {
+                  "searchFor": "__require",
+                  "replaceWith": "require"
+                }
+              ]
+            }
+          ],
+          [
+            "@virtualpatterns/babel-plugin-mablung-replace-string-literal",
+            {
+              "rule": [
+                {
+                  "searchFor": "^(\\.{1,2}\\/.*?)\\.js$",
+                  "replaceWith": "$1.cjs"
+                }
+              ]
+            }
+          ]
+        ],
+        "presets": [
+          [
+            "@babel/preset-env",
+            {
+              "targets": {
+                "node": "current"
+              }
+            }
+          ]
+        ]
+      },
+      "esmodule": {
+        "plugins": [
+          "@babel/plugin-syntax-import-meta",
+          [
+            "@virtualpatterns/babel-plugin-mablung-replace-identifier",
+            {
+              "rule": [
+                {
+                  "searchFor": "__filePath",
+                  "replaceWith": "__importIdentifier.fileURLToPath(import.meta.url)",
+                  "parserOption": {
+                    "plugins": [
+                      "importMeta"
+                    ],
+                    "sourceType": "module"
+                  },
+                  "addImport": [
+                    {
+                      "type": "default",
+                      "source": "url",
+                      "option": {
+                        "nameHint": "URL"
+                      }
+                    }
+                  ]
+                },
+                {
+                  "searchFor": "__require",
+                  "replaceWith": "__importIdentifier(import.meta.url)",
+                  "parserOption": {
+                    "plugins": [
+                      "importMeta"
+                    ],
+                    "sourceType": "module"
+                  },
+                  "addImport": [
+                    {
+                      "type": "named",
+                      "name": "createRequire",
+                      "source": "module"
+                    }
+                  ]
+                }
+              ]
+            }
+          ]
+        ]
+      }
+    }
+  },
   "bin": {
     "mablung-makefile-environment": "./release/command/mablung-makefile-environment.js"
   },
@@ -21,7 +116,8 @@
     "all": true,
     "exclude": [
       "release/commonjs/sandbox",
-      "release/esmodule/sandbox"
+      "release/esmodule/sandbox",
+      "release/header"
     ],
     "reporter": [
       "html"
@@ -55,22 +151,21 @@
   "type": "module",
   "version": "0.0.1-28",
   "dependencies": {
-    "@babel/core": "^7.14.8",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/preset-env": "^7.14.8",
-    "@virtualpatterns/babel-preset-mablung-makefile": "0.0.1-1",
-    "@virtualpatterns/eslint-config-mablung-makefile": "0.0.1-12",
-    "@virtualpatterns/babel-plugin-mablung-replace-identifier": "0.0.1-31",
-    "@virtualpatterns/babel-plugin-mablung-replace-string-literal": "0.0.1-27",
-    "@virtualpatterns/mablung-makefile": "0.0.1-93",
-    "@virtualpatterns/mablung-source-map-support": "0.0.2-67",
+    "@babel/preset-env": "^7.15.0",
+    "@virtualpatterns/babel-preset-mablung-makefile": "0.0.11",
+    "@virtualpatterns/eslint-config-mablung-makefile": "0.0.11",
+    "@virtualpatterns/babel-plugin-mablung-replace-identifier": "0.0.3",
+    "@virtualpatterns/babel-plugin-mablung-replace-string-literal": "0.0.2",
+    "@virtualpatterns/mablung-makefile": "0.0.21",
+    "@virtualpatterns/mablung-source-map-support": "0.0.9",
     "commander": "^8.1.0",
-    "fs-extra": "^10.0.0",
-    "json5": "^2.2.0"
+    "fs-extra": "^10.0.0"
   },
   "devDependencies": {
-    "@virtualpatterns/mablung-check-dependency": "0.0.1-63",
+    "@virtualpatterns/mablung-check-dependency": "0.0.5",
     "@virtualpatterns/mablung-worker": "0.0.2-40",
-    "ava": "^3.15.0"
+    "ava": "^3.15.0",
+    "shelljs": "^0.8.4"
   }
 }
