--- a/package.json
+++ b/package.json
@@ -160,7 +160,7 @@
     "url": "https://github.com/virtualpatterns/mablung-makefile-environment"
   },
   "type": "module",
-  "version": "0.0.25-1",
+  "version": "0.0.25",
   "dependencies": {
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/preset-env": "^7.15.0",
